--- a/style.css
+++ b/style.css
@@ -47,6 +47,16 @@ body {
     background: var(--bgColor);
 }
 
+a {
+    text-decoration: none;
+}
+
+svg {
+    width: 100%;
+    height: 100%;
+    fill: var(--primaryTextColor);
+}
+
 #container {
     display: flex;
     flex-flow: column;
@@ -60,14 +70,12 @@ body {
     display: none;
 }
 
-a {
-    text-decoration: none;
-}
-
-svg {
-    width: 100%;
-    height: 100%;
-    fill: var(--primaryTextColor);
+.null {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--secondaryTextColor);
 }
 
 
