--- a/styles/darkMode.css
+++ b/styles/darkMode.css
@@ -7,6 +7,7 @@
     --primaryTextColor: rgb(255, 255, 255);
     --secondaryTextColor: rgb(229, 229, 229);
     --newsDetailsColor: rgb(155, 155, 155);
+    --secondaryColor: rgb(0, 36, 77);
 }
 
 
