--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ svg {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-family: 'dirooz';
+    text-align: center;
     color: var(--secondaryTextColor);
 }
 
