--- a/styles/comments.css
+++ b/styles/comments.css
@@ -1,3 +1,5 @@
+/* Comments Container: */
+
 #commentsContainer {
     width: 100%;
     max-height: 130vh;
@@ -13,6 +15,13 @@
 
 #commentsContainer::-webkit-scrollbar {
     width: 1em;
+}
+
+#commentsContainer .null {
+    position: relative;
+    left: 45%;
+    top: 0.5em;
+    display: block;
 }
 
 #commentsTitleContainer {
@@ -41,22 +50,31 @@
     justify-content: center;
 }
 
+
+/* Comment Body: */
+
 .comment {
+    box-shadow: 6px 6px 5px var(--primaryShadowColor);
+    list-style: none;
+}
+
+.comment-body {
     --primaryShadowColor: rgb(245, 245, 245);
-    width: 90%;
+    width: 100%;
     height: auto;
     margin: auto;
     margin-bottom: 1em;
-    border-radius: 18px;
+    border-radius: 13px;
     box-shadow: 6px 6px 5px var(--primaryShadowColor), -3px -3px 5px var(--primaryShadowColor);
+    list-style: none;
 }
 
-.commentHeader {
+
+/* Comment header */
+
+.comment-author {
     width: 100%;
     height: 3em;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: repeat(2, 1fr);
     margin-bottom: 0.75em;
     border-top-right-radius: 18px;
     border-top-left-radius: 18px;
@@ -66,51 +84,64 @@
     overflow: hidden;
 }
 
-.profileAvatar {
-    width: 6.5em;
+.comment-author img {
+    width: 4.5em;
     height: 3.5em;
-    grid-row: 1/3;
 }
 
-.profileAvatar * {
-    width: 100%;
-    height: 100%;
+.fn {
+    font: normal bold 1.75rem 'b elham';
 }
 
-.profileName,
-.commentDate {
-    font: normal bold 0.75rem 'b elham';
-}
-
-.profileName {
-    padding-bottom: 1em;
-}
-
-.commentDate {
+.fn,
+.says {
     position: relative;
-    bottom: 1.25em;
-    font-size: 0.8rem;
+    bottom: 1em;
 }
 
-.commentDate h2 {
+.says {
+    font: italic normal 1.1em 'dirooz';
+    bottom: 1.65em;
+    right: 0.3em;
+}
+
+
+/* Comment meta data: */
+
+.commentmetadata {
+    position: relative;
+    bottom: 0.6em;
+}
+
+
+/* Comment Date: */
+
+.commentmetadata a:nth-child(1) {
+    font: normal 550 1.5rem 'b elham';
+    color: var(--articleDetailsColor);
+}
+
+
+/* Comment edit link: */
+
+.comment-edit-link {
+    font: bold 1rem 'dirooz';
     color: var(--newsDetailsColor);
 }
 
-.commentContent {
-    width: 100%;
-    height: auto;
-    max-height: 9em;
-    padding: 0.3em;
-    overflow-y: scroll;
-    border-bottom-left-radius: 18px;
-    border-bottom-right-radius: 18px;
-}
 
-.commentContent p {
+/* Comment Content: */
+
+.comment-body p {
+    position: relative;
+    bottom: 0.6em;
     font: normal 1.1rem 'dirooz';
     color: var(--secondaryTextColor);
     text-align: justify;
 }
+
+
+/* Reply Link: */
 
 .reply {
     width: 100%;
@@ -120,15 +151,24 @@
     border-bottom-right-radius: 18px;
 }
 
-.reply button {
-    float: left;
+.reply a {
+    margin-right: 0.5em;
     border: none;
-    background-color: var(--primaryColor);
-    font: normal bold 1.3rem 'dirooz';
-    padding: 0.3em;
+    font: normal bold 1rem 'dirooz';
     text-decoration: underline;
     color: var(--secondaryTextColor);
     cursor: pointer;
+}
+
+
+/* Children comments: */
+
+.children .says {
+    display: none;
+}
+
+.children .fn {
+    font-size: 1.4em;
 }
 
 
