--- a/styles/bigNews.css
+++ b/styles/bigNews.css
@@ -9,6 +9,15 @@
     overflow: hidden;
 }
 
+#bigNews .null {
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .bigNewsItem {
     width: 100%;
     height: 100%;
