--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Tags: news, minimal,neomorphism, اخبار, مینیمال, نئومرفیسم
 @import url('./styles/header.css');
 @import url('./styles/menu.css');
 @import url('./styles/searchBox.css');
-@import url('./styles/bigNews.css');
+@import url('./styles/slider.css');
 @import url('./styles/advertising.css');
 @import url('./styles/articles.css');
 @import url('./styles/pageNumberContainer.css');
@@ -27,7 +27,7 @@ Tags: news, minimal,neomorphism, اخبار, مینیمال, نئومرفیسم
     --txtBgColor: rgba(0, 0, 0, 0.5);
     --primaryTextColor: rgb(0, 0, 0);
     --secondaryTextColor: rgb(37, 37, 37);
-    --bigNewsTitleColor: var(--primaryColor);
+    --sliderTitleColor: var(--primaryColor);
     --newsDetailsColor: var(--primaryBorderColor);
     --articleDetailsColor: rgba(0, 0, 0, 0.7);
     --scrollBarRailColor: rgb(230, 230, 230);
