--- a/styles/advertising.css
+++ b/styles/advertising.css
@@ -1,13 +1,14 @@
-#Advertising {
+.ads {
     width: 100%;
-    height: 3em;
-    position: relative;
-    top: 1.2em;
+    height: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #000;
-    border-bottom: 3px solid var(--primaryBorderColor);
-    font: italic normal bolder 2em 'dirooz', georgia;
-    color: rgb(255, 255, 255);
+    flex-flow: column;
+    position: relative;
+    top: 2.6em;
+    background-color: var(--primaryColor);
+}
+
+.ads * {
+    max-height: 15em;
+    flex: 1;
 }
