--- a/styles/articles.css
+++ b/styles/articles.css
@@ -55,6 +55,9 @@
 .newsDetails {
     width: 100%;
     max-height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     font-size: 1rem;
     color: var(--newsDetailsColor);
     text-align: justify;
