--- a/styles/articlesTools.css
+++ b/styles/articlesTools.css
@@ -27,54 +27,30 @@
 
 .articleToolContent {
     width: 100%;
-    max-height: 7em;
+    min-height: 5em;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 1fr 4fr;
+    border: 2px solid var(--primaryBorderColor);
+    border-style: solid none none;
 }
 
-.articleToolContent:nth-child(even) {
-    border: var(--borderStyle);
-    border-style: solid none;
-}
-
-.articleToolContent * {
-    width: 100%;
-    height: 100%;
-}
-
-.articleToolContentImgLink {
+.articleToolContent .articleToolContentImg {
     grid-column: 1/2;
-    grid-row: 1/5;
+    grid-row: 1/3;
 }
 
-.articleToolContentImg {
-    width: 100%;
-    height: 100%;
+.articleToolsContentTitle,
+.articleToolsContentDetails {
+    padding-right: .2em;
 }
 
-.articleToolContentTitleLink {
-    grid-column: 2/5;
+.articleToolsContentTitle {
+    font: normal bold 1.2rem 'dirooz';
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
-.articleToolContentTitle,
-.articleToolContentDetails {
-    grid-column: 2/5;
-    padding-right: 0.4em;
-    font: normal bolder 0.9rem 'dirooz', georgia;
-}
-
-.articleToolContentTitle {
-    grid-row: 1/4;
-    font-size: 1.1rem;
-    overflow: hidden;
-}
-
-.articleToolContentDetails {
-    grid-row: 4/5;
-    display: flex;
-    align-items: center;
-    padding-bottom: 0.1em;
-    font-size: 0.85em;
-    color: var(--newsDetailsColor);
+.articleToolsContentDetails {
+    font: normal bold 1.1rem 'dirooz';
+    color: var(--secondaryTextColor);
 }
