--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,15 +1,15 @@
-#bigNews {
+#slider {
     width: 100%;
     height: 75vh;
     position: relative;
-    top: 2.5em;
+    bottom: .3em;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     overflow: hidden;
 }
 
-#bigNews .null {
+#slider .null {
     width: auto;
     height: auto;
     position: absolute;
@@ -18,7 +18,7 @@
     transform: translate(-50%, -50%);
 }
 
-.bigNewsItem {
+.sliderItem {
     width: 100%;
     height: 100%;
     grid-column: 2/3;
@@ -26,17 +26,17 @@
     overflow: hidden;
 }
 
-.bigNewsItem:nth-child(1) {
+.sliderItem:nth-child(1) {
     grid-column: 1/2;
     grid-row: 1/3;
 }
 
-.bigNewsImage {
+.sliderImage {
     width: 100%;
     height: 100%;
 }
 
-.bigNewsTitle {
+.sliderTitle {
     width: 100%;
     min-height: 1.2em;
     max-height: 5em;
