--- a/styles/slider.css
+++ b/styles/slider.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 75vh;
     position: relative;
-    bottom: .3em;
+    top: 2.5em;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
